--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+:root{
+    --White: hsl(0, 0%, 100%);
+    --Light_gray: hsl(212, 45%, 89%);
+    --Grayish_blue: hsl(220, 15%, 55%);
+    --Dark_blue: hsl(218, 44%, 22%);
+}
 body {
-    background-color: hsl(212, 45%, 89%);
-}
-
-.container {
-
-    width: 300px;
-    text-align: center;
-    background-color: hsl(0, 0%, 100%);
-    padding: 10px;
-    border-radius: 15px;
-    margin: auto;
-    margin-top: 100px;
-    /* margin: 0 auto; */
-}
-
-.qr-code img {
-    width: 300px;
-    border-radius: 15px;
-}
-
-.head {
+    background-color: var(--Light_gray);
     font-family: 'Outfit', sans-serif;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card_container {
+    max-width: 350px;
+    text-align: center;
+    background-color:var(--White);
+    padding: 15px;
+    border-radius: 20px;
+}
+
+.img_container img{
+    width: 100%;
+    border-radius: 15px;
+}
+
+.text_container h2{
+    margin: 20px;
     font-size: 23px;
-    font-weight: 600;
-    margin: 15px 0;
+    font-weight: 800;
+    color: var(--Dark_blue);
 }
 
-.text {
-    font-weight: lighter;
-    color: hsl(220, 15%, 55%);
-    margin: 15px 0;
+
+.text_container p {
+    color: var(--Grayish_blue);
+    font-size: 15px;
     margin-bottom: 30px;
-    font-family: 'Outfit', sans-serif;
-}
+    font-weight: 400;
+    line-height: 1.3;
 
-.attribution {
-    font-size: 11px;
-    text-align: center;
-    margin-top: 100px;
-}
-
-.attribution a {
-    color: hsl(228, 45%, 44%);
 }
