--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,98 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
-:root{
-    --White: hsl(0, 0%, 100%);
-    --Light_gray: hsl(212, 45%, 89%);
-    --Grayish_blue: hsl(220, 15%, 55%);
-    --Dark_blue: hsl(218, 44%, 22%);
+*{
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
 }
-body {
-    background-color: var(--Light_gray);
-    font-family: 'Outfit', sans-serif;
+
+main{
+    background-color: hsl(225, 100%, 94%);
+    background-image: url("../images/pattern-background-desktop.svg") ;
+    background-size: 100%;
+    background-repeat: no-repeat;
     height: 100vh;
+
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: 'Red Hat Display', sans-serif;
 }
 
-.card_container {
-    max-width: 350px;
+.content-wrap{
+    width: 350px;
+    border-radius: 25px;
+    background-color: white;
+}
+.main-img img{
+    width: 350px;
+    border-radius: 25px 25px 0 0;
+}
+.mid-section{
+    background-color: white;
     text-align: center;
-    background-color:var(--White);
-    padding: 15px;
-    border-radius: 20px;
+    padding: 20px;
+}
+.mid-section h1{
+    font-weight: bolder;
+    padding-bottom: 15px;
+    font-size: 1.7em;
+}
+.mid-section p{
+    color: hsl(224, 23%, 55%);
+    font-size: 17px;
+    padding-bottom: 15px;
+    line-height: 1.4;
 }
 
-.img_container img{
-    width: 100%;
+.plan{
+    background-color: hsl(225, 100%, 98%);
+    width: 90%;
+    text-align: center;
+    margin: auto;
+    padding: 12px 0;
     border-radius: 15px;
+    
 }
-
-.text_container h2{
-    margin: 20px;
-    font-size: 23px;
-    font-weight: 800;
-    color: var(--Dark_blue);
+.plan img{
+    margin: 0 15px;
+    display: inline-block;
+    vertical-align: middle;
 }
-
-
-.text_container p {
-    color: var(--Grayish_blue);
-    font-size: 15px;
-    margin-bottom: 30px;
-    font-weight: 400;
-    line-height: 1.3;
-
+.plan a{
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0 15px;
+    font-weight: bold;
+}
+.plan a:hover{
+    color:hsl(224, 23%, 55%);
+}
+.annual{
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0 15px;
+    vertical-align: middle;
+}
+.payment{
+    background-color: hsl(245, 75%, 52%);
+    color: white;
+    width: 70%;
+    margin: auto;
+    text-align: center;
+    padding: 15px;
+    border-radius: 15px;
+    margin-top: 25px;
+    
+}
+.payment:hover{
+    opacity: .7;
+    cursor: pointer;
+}
+.cancel-order{
+    color:hsl(224, 23%, 55%);
+    text-align: center;
+    padding: 25px;
+}
+.cancel-order:hover{
+    color: hsl(223, 47%, 23%);
+    cursor: pointer;
 }
