--- a/css/style.css
+++ b/css/style.css
@@ -1,79 +1,105 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root {
+    --Pale_blue: hsl(225, 100%, 94%);
+    --Bright_blue: hsl(245, 75%, 52%);
+    --Very_pale_blue: hsl(225, 100%, 98%);
+    --Desaturated_blue: hsl(224, 23%, 55%);
+    --Dark_blue: hsl(223, 47%, 23%);
+}
+
+* {
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
 }
 
-main{
-    background-color: hsl(225, 100%, 94%);
-    background-image: url("../images/pattern-background-desktop.svg") ;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    height: 100vh;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
+body{
     font-family: 'Red Hat Display', sans-serif;
 }
 
-.content-wrap{
+main {
+    background-color: var(--Pale_blue);
+    background-image: url("../images/pattern-background-desktop.svg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card-container {
     width: 350px;
     border-radius: 25px;
-    background-color: white;
+    background-color: #ffff;
 }
-.main-img img{
+
+.card-img img {
     width: 350px;
     border-radius: 25px 25px 0 0;
 }
-.mid-section{
-    background-color: white;
+.text-container{
     text-align: center;
-    padding: 20px;
 }
-.mid-section h1{
+.order-summary-container {
+    background-color: #fff;
+    text-align: center;
+    padding-top: 20px;
+}
+
+.order-summary-container h1 {
     font-weight: bolder;
     padding-bottom: 15px;
     font-size: 1.7em;
 }
-.mid-section p{
-    color: hsl(224, 23%, 55%);
+
+.order-summary-container p {
+    color: var(--Desaturated_blue);
     font-size: 17px;
     padding-bottom: 15px;
     line-height: 1.4;
 }
 
-.plan{
-    background-color: hsl(225, 100%, 98%);
+.plan-container {
+    background-color: var(--Very_pale_blue);
     width: 90%;
     text-align: center;
-    margin: auto;
+    margin: 20px;
     padding: 12px 0;
     border-radius: 15px;
-    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
 }
-.plan img{
+
+.plan-container img {
     margin: 0 15px;
     display: inline-block;
     vertical-align: middle;
 }
-.plan a{
+
+.plan-container a {
     display: inline-block;
     vertical-align: middle;
     margin: 0 15px;
     font-weight: bold;
 }
-.plan a:hover{
-    color:hsl(224, 23%, 55%);
+
+.plan-container a:hover {
+    color: hsl(224, 23%, 55%);
 }
-.annual{
+
+.annual {
     display: inline-block;
     vertical-align: middle;
     margin: 0 15px;
     vertical-align: middle;
 }
-.payment{
-    background-color: hsl(245, 75%, 52%);
+
+.payment {
+    background-color: var(--Bright_blue);
     color: white;
     width: 70%;
     margin: auto;
@@ -81,18 +107,20 @@ main{
     padding: 15px;
     border-radius: 15px;
     margin-top: 25px;
-    
 }
-.payment:hover{
+
+.payment:hover {
     opacity: .7;
     cursor: pointer;
 }
-.cancel-order{
-    color:hsl(224, 23%, 55%);
+
+.cancel-order {
+    color: hsl(224, 23%, 55%);
     text-align: center;
     padding: 25px;
 }
-.cancel-order:hover{
+
+.cancel-order:hover {
     color: hsl(223, 47%, 23%);
     cursor: pointer;
 }
