--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');
+
+:root {
+    /* Primary */
+    --Soft-blue: hsl(215, 51%, 70%);
+    --Cyan: hsl(178, 100%, 50%);
+
+    /* Neutral */
+
+    --Very-dark-blue-main: hsl(217, 54%, 11%);
+    /*(main BG)*/
+    --Very-dark-blue-card: hsl(216, 50%, 16%);
+    /*(card BG)*/
+    --Very-dark-blue-line: hsl(215, 32%, 27%);
+    /*(line)*/
+    --White: hsl(0, 0%, 100%);
+
+}
+
+
+
 body {
-    background-color: hsl(217, 54%, 11%);
+    background-color: var(--Very-dark-blue-main);
     height: 100vh;
     display: flex;
     align-items: center;
     justify-items: center;
     box-sizing: border-box;
-
+    font-family: 'Outfit', sans-serif;
 }
 
-.container {
+.card-container {
     width: 300px;
     margin: auto;
     padding: 25px;
-    border-radius: 20px;
-    font-family: 'Outfit', sans-serif;
-    background-color: hsl(216, 50%, 16%);
+    border-radius: 15px;
+    background-color: var(--Very-dark-blue-card);
 }
 
 .main-img {
     display: block;
     position: relative;
+    /* width: 300px; */
 }
 
 .main-img img {
-    width: 300px;
+    width: 100%;
     border-radius: 25px;
 }
 
 .icon {
     position: absolute;
-    background-color: hsl(178, 100%, 50%);;
+    background-color: hsl(178, 100%, 50%);
     border-radius: 25px;
-    width: 300px;
-    height: 300px;
+    width: 100%;
     bottom: 0%;
     top: 0;
     opacity: 0;
@@ -44,12 +64,17 @@ body {
     cursor: pointer;
 }
 
-.svg {
+.icon svg {
     position: absolute;
     opacity: 1;
-    top: 125px;
-    left: 125px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
+
+
+
+
 
 .heading {
     color: hsl(0, 0%, 100%);
